# ackermann-jax

./: .gitignore  CLAUDE.md  README.md  package.xml  pixi.toml  pyproject.toml
docs/: Makefile  README.md  conf.py  doc_stuff.rst  ekf_theory.rst  index.rst  physics_theory.rst
docs/api/: car.rst  ekf.rst  error_dynamics.rst  index.rst  parameters.rst
launch/: ekf.launch.py  mpc_ekf.launch.py
src/ackermann_jax/: __init__.py  ackermann_car.py  car.py  ekf.py  ekf_ros_node.py  ekf_sensors.py  errorDyn.py  mpc.py  mpc_ekf_ros_node.py  parameters.py  publish_kalman_ros.py  read_kalman_shm.py  write_kalman_shm.py
test/: diagnose_mpc.py  ex_traj.py  heading_validation.py  mpc_eval.py  straight_test.py  sweep_params.py  test_contact_settle.py  test_ekf.py  test_ekf2.py  test_ekf_jacobians.py  test_ekf_sinusoidal.py  test_heading.py  test_heading2.py  test_mpc.py  test_newDyn.py  test_pos.py  test_traj.py  trace_ekf_step.py
vehicle_sim/: ackermann_car.py  types.py
