[project]
name = "ackermann_jax"
version = "0.0.1"
requires-python = ">= 3.11"
description = "3D Rigid Body Ackermann Car Physics in JAX"
authors= [
  { name = "Lucas Libshutz", email = "lsl94@cornell.edu"}
]

dependencies = [
  "jax",
  "jaxlie",
  "ipython",
  "jaxsim",
  "addcopyfighandler>=3.2.4,<4"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64","osx-arm64","osx-64","linux-aarch64"]

[tool.pixi.environments]
default = {features = ["cpu"]}
gpu = {features = ["gpu"]}


[tool.pixi.dependencies]
jax = "*"
jaxlie = "*"
jaxsim = "*"
ipython = ">=9.10.0,<10"
black = ">=26.1.0,<27"
ruff = ">=0.15.2,<0.16"
pyqt = ">=5.15.11,<6"

[tool.pixi.pypi-dependencies]
ackermann-jax = {path = "./", editable = true}

[tool.pixi.feature.gpu]
platforms = ["linux-64","linux-aarch64"]
system-requirements = { cuda = "12.6"}

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"

[tool.pixi.feature.gpu.pypi-dependencies]
jax = {version = "*", extras = ["cuda12"]}

[tool.pixi.feature.cpu.dependencies]
