[project]
name = "ackermann_jax"
version = "0.0.1"
requires-python = ">= 3.11"
description = "3D Rigid Body Ackermann Car Physics in JAX"
authors= [
  { name = "Lucas Libshutz", email = "lsl94@cornell.edu"},
  { name = "Smriti Kumar", email = "sk3452@cornell.edu"}
]

dependencies = [
  "jax",
  "jaxlie",
  "ipython",
  "jaxsim",
  "addcopyfighandler>=3.2.4,<4"
]

[project.scripts]
ekf_ros_node = "ackermann_jax.ekf_ros_node:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge","robostack-staging"]
platforms = ["linux-64","osx-arm64","osx-64","linux-aarch64"]

[tool.pixi.environments]
default = {features = ["cpu"]}
gpu = {features = ["gpu"]}


[tool.pixi.dependencies]
jaxlie = "*"
jaxsim = "*"
ipython = ">=9.10.0,<10"
black = ">=26.1.0,<27"
ruff = ">=0.15.2,<0.16"
pyqt = ">=5.15.11,<6"
ros-humble-rclpy = "*"
ros-humble-nav-msgs = "*"
ros-humble-sensor-msgs = "*"
ros-humble-ackermann-msgs = "*"
ros-humble-geometry-msgs = "*"
ros-humble-ros-base = "*"

[tool.pixi.tasks]
# Register ackermann_jax in the ament resource index so `ros2 run` can find it.
# Run once after `pixi install`: pixi run register-ros
register-ros = """
mkdir -p $CONDA_PREFIX/share/ament_index/resource_index/packages &&
touch $CONDA_PREFIX/share/ament_index/resource_index/packages/ackermann_jax &&
mkdir -p $CONDA_PREFIX/share/ackermann_jax &&
cp package.xml $CONDA_PREFIX/share/ackermann_jax/package.xml &&
mkdir -p $CONDA_PREFIX/lib/ackermann_jax &&
printf '#!/usr/bin/env python3\nfrom ackermann_jax.ekf_ros_node import main\nmain()\n' > $CONDA_PREFIX/lib/ackermann_jax/ekf_ros_node &&
chmod +x $CONDA_PREFIX/lib/ackermann_jax/ekf_ros_node &&
echo 'ackermann_jax registered in ament index at' $CONDA_PREFIX
"""

[tool.pixi.pypi-dependencies]
ackermann-jax = {path = "./", editable = true}

[tool.pixi.feature.gpu]
platforms = ["linux-64","linux-aarch64"]
system-requirements = { cuda = "12.6"}

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"

[tool.pixi.feature.gpu.pypi-dependencies]
jax = {version = "*", extras = ["cuda12"]}

[tool.pixi.feature.cpu.dependencies]
jax = "*"
