[project]
name = "ackermann_jax"
version = "0.0.1"
requires-python = ">= 3.11"
description = "3D Rigid Body Ackermann Car Physics in JAX"
authors= [
  { name = "Lucas Libshutz", email = "lsl94@cornell.edu"},
  { name = "Smriti Kumar", email = "sk3452@cornell.edu"}
]

dependencies = [
  "jax",
  "jaxlie",
  "ipython",
  "jaxsim",
  "addcopyfighandler>=3.2.4,<4"
]

[project.scripts]
mpc_ekf_ros_node = "ackermann_jax.mpc_ekf_ros_node:main"
ekf_sensors = "ackermann_jax.ekf_sensors:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge","robostack-staging"]
platforms = ["linux-64","osx-arm64","osx-64","linux-aarch64"]

[tool.pixi.environments]
default = {features = ["cpu"]}
ros = {features = ["ros"]}
gpu = {features = ["gpu"]}


[tool.pixi.dependencies]
jaxlie = "*"
jaxsim = "*"
ipython = ">=9.10.0,<10"
black = ">=26.1.0,<27"
ruff = ">=0.15.2,<0.16"
pyqt = ">=5.15.11,<6"
osqp = ">=1.1.1,<2"
jaxopt = ">=0.8.4,<0.9"

[tool.pixi.pypi-dependencies]
ackermann-jax = {path = "./", editable = true}

[tool.pixi.feature.gpu]
platforms = ["linux-64","linux-aarch64"]
system-requirements = { cuda = "12.6"}

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"

[tool.pixi.feature.gpu.pypi-dependencies]
jax = {version = "*", extras = ["cuda12"]}

# add dependencies for ros-test envrionment
[tool.pixi.feature.ros.dependencies]
ros-humble-rclpy = "*"
ros-humble-nav-msgs = "*"
ros-humble-launch-ros = "*"
ros-humble-ros2launch = "*"
ros-humble-ros2topic = "*"

[tool.pixi.feature.cpu.dependencies]
jax = "*"
